[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://menus/MenuBg.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/MPSelection.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" parent="." instance=ExtResource( 2 )]
margin_left = -106.0
margin_top = -39.0
margin_right = 106.0
margin_bottom = 83.0

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -28.0
margin_right = 95.0
margin_bottom = 28.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GridContainer"]
margin_top = 5.0
margin_right = 17.0
margin_bottom = 19.0
text = "IP:"

[node name="IP" type="LineEdit" parent="GridContainer"]
margin_left = 21.0
margin_right = 190.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
rect_pivot_offset = Vector2( -654, -277 )
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="GridContainer2" type="GridContainer" parent="."]
margin_left = 545.0
margin_top = 360.0
margin_right = 732.0
margin_bottom = 402.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="GridContainer2"]
margin_right = 187.0
margin_bottom = 14.0
text = "Player name:"

[node name="Playername" type="LineEdit" parent="GridContainer2"]
margin_top = 18.0
margin_right = 187.0
margin_bottom = 42.0
rect_min_size = Vector2( 120, 0 )
rect_pivot_offset = Vector2( -654, -277 )
size_flags_horizontal = 3
text = "Player"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 545.0
margin_top = 405.0
margin_right = 735.0
margin_bottom = 433.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHost" type="Button" parent="HBoxContainer"]
margin_right = 93.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Host"

[node name="ButtonConnect" type="Button" parent="HBoxContainer"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Connect"

[connection signal="pressed" from="HBoxContainer/ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonConnect" to="." method="_on_ButtonConnect_pressed"]
